--- a/app/index.html
+++ b/app/index.html
@@ -46,6 +46,7 @@
     <script src="scripts/controllers/events.js"></script>
     <script src="scripts/controllers/card.js"></script>
     <script src="scripts/services/calendarservice.js"></script>
+    <script src="scripts/controllers/calendar.js"></script>
     <!-- endbuild -->
   </head>
   <body ng-app="datenightApp">
