--- a/app/index.html
+++ b/app/index.html
@@ -47,6 +47,7 @@
     <script src="scripts/controllers/card.js"></script>
     <script src="scripts/services/calendarservice.js"></script>
     <script src="scripts/controllers/calendar.js"></script>
+    <script src="scripts/controllers/eventdetails.js"></script>
     <!-- endbuild -->
   </head>
   <body ng-app="datenightApp">
