--- a/app/index.html
+++ b/app/index.html
@@ -48,6 +48,8 @@
     <script src="scripts/services/calendarservice.js"></script>
     <script src="scripts/controllers/calendar.js"></script>
     <script src="scripts/controllers/eventdetails.js"></script>
+    <script src="scripts/services/venueservice.js"></script>
+    <script src="scripts/services/venuedata.js"></script>
     <!-- endbuild -->
   </head>
   <body ng-app="datenightApp">
