feat(accessibility): add wheelchair acessible filters

--- a/app/index.html
+++ b/app/index.html
@@ -50,6 +50,8 @@
     <script src="scripts/controllers/eventdetails.js"></script>
     <script src="scripts/services/venueservice.js"></script>
     <script src="scripts/services/venuedata.js"></script>
+    <script src="scripts/controllers/setting.js"></script>
+    <script src="scripts/services/eventsservice.js"></script>
     <!-- endbuild -->
   </head>
   <body ng-app="datenightApp">
