fix(css): fix missing css

--- a/app/index.html
+++ b/app/index.html
@@ -11,8 +11,12 @@
     <link rel="stylesheet" href="bower_components/ionic-contrib-tinder-cards/ionic.tdcards.css" />
     <!-- endbower -->
     <!-- endbuild -->
+
+      <!-- build:css({.tmp,app}) styles/main.css -->
     <link href="styles/style.css" rel="stylesheet">
     <link href="styles/main.css" rel="stylesheet">
+      <!-- endbuild -->
+
     <link href='http://fonts.googleapis.com/css?family=Signika' rel='stylesheet' type='text/css'>
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
