--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html manifest="manifest.appcache">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
@@ -12,7 +12,7 @@
     <!-- endbower -->
     <!-- endbuild -->
 
-      <!-- build:css({.tmp,app}) styles/main.css -->
+      <!-- build:css({.temp,app}) styles/main.css -->
     <link href="styles/style.css" rel="stylesheet">
     <link href="styles/main.css" rel="stylesheet">
       <!-- endbuild -->
