fix(build): add css to usemin

--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
     <!-- endbower -->
     <!-- endbuild -->
 
-      <!-- build:css({.tmp,app}) styles/main.css -->
+      <!-- build:css({.temp,app}) styles/main.css -->
     <link href="styles/style.css" rel="stylesheet">
     <link href="styles/main.css" rel="stylesheet">
       <!-- endbuild -->
