--- a/index.html
+++ b/index.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html><html manifest="manifest.appcache"><head><meta charset="utf-8"><meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no,width=device-width"><title></title><link rel="stylesheet" href="styles/vendor.css"><link rel="stylesheet" href="styles/main.css"><link href="http://fonts.googleapis.com/css?family=Signika" rel="stylesheet" type="text/css"><!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="styles/ionic.app.css" rel="stylesheet">
-    --><!-- ionic/angularjs js --><script src="scripts/vendor.js"></script><!-- cordova script (this will be a 404 during development) --><script src="cordova.js"></script><!-- your app's js --><script src="scripts/scripts.js"></script><body ng-app="datenightApp"><!--
+    --><!-- ionic/angularjs js --><script src="scripts/vendor.js"></script><!-- cordova script (this will be a 404 during development) --><script>function getScript(src, func) {
+              var script = document.createElement('script');
+              script.async = "async";
+              script.src = src;
+              if (func) {
+                  script.onload = func;
+              }
+              document.getElementsByTagName("head")[0].appendChild( script );
+          }
+
+          if ( navigator.userAgent.indexOf("iPhone") > 0 || navigator.userAgent.indexOf("iPad") > 0 || navigator.userAgent.indexOf("iPod") > 0) {
+              getScript("platforms/ios/cordova.js");
+          } else if (navigator.userAgent.indexOf("Android") > 0) {
+              getScript("platforms/android/cordova.js");
+          }</script><!--<script src="cordova.js"></script>--><!-- your app's js --><script src="scripts/scripts.js"></script><body ng-app="datenightApp"><!--
       The nav bar that will be updated as we navigate between views.
     --><ion-nav-bar class="bar-calm"><ion-nav-back-button></ion-nav-back-button></ion-nav-bar><!--
       The views will be rendered in the <ion-nav-view> directive below
